syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";

message WeddingGuestbook {
  uint64 writer_guid = 1;
  string writer_name = 2;
  int32 writer_job = 3;
  int64 write_date = 4;
  string contents = 5;
}

message WeddingInvitation {
  uint64 marriage_guid = 1;
  uint64 inviter_guid = 2;
  string inviter_name = 3;
  uint64 spouse_guid = 4;
  string spouse_name = 5;
  int32 wedding_hall_index = 6;
  int32 wedding_date = 7;
}

message WeddingAttendance {
  uint64 attendance_guid = 1;
  string attendance_name = 2;
  uint64 g_guid = 3;
  int32 reply_type = 4;
}

message WeddingThemeCeremony {
  int32 category = 1;
  int32 index = 2;
}

message WeddingTheme {
  int32 wedding_hall = 1;
  int32 officiant = 2;
  repeated int32 guest_list = 3;
  int32 dress = 4;
  repeated WeddingThemeCeremony ceremony_list = 5;
}

message WeddingPreparation {
  uint64 char_guid = 1;
  WeddingTheme theme = 2;
  int32 payment_amount = 3;
  int32 payment_gold = 4;
  int32 payment_tera = 5;
}

message WeddingMoneygiftRanking {
  uint64 guid = 1;
  int32 grow_type = 2;
  int32 second_grow_type = 3;
  int32 job = 4;
  int32 level = 5;
  string name = 6;
  int64 rank = 7;
  uint64 score = 8;
}

message WorldRaidInfo {
  int32 dungeon_index = 1;
  uint64 hp = 2;
}

message WorldRaidRanking {
  int32 grow_type = 1;
  int32 second_grow_type = 2;
  uint64 guid = 3;
  int32 job = 4;
  int32 level = 5;
  string name = 6;
  int32 rank = 7;
  uint64 score = 8;
  int32 character_frame = 9;
}

message WatchingBookmark {
  uint64 guid = 1;
  string name = 2;
  int32 level = 3;
  int32 job = 4;
  int32 grow_type = 5;
  int32 second_grow_type = 6;
  int32 character_frame = 7;
  string profile_url = 8;
  string profile_name = 9;
  int64 play_time = 10;
  int32 last_pvp_match = 11;
}

message Verification {
  string client_start_time = 1;
}

message VerificationAddDamageData {
  uint32 flag = 1;
  int32 damage = 2;
  int32 item_index = 3;
  int32 if_index = 4;
  int32 then_index = 5;
}
